fix footer follow us spacing

--- a/mari-vanna-website/src/App.css
+++ b/mari-vanna-website/src/App.css
@@ -623,6 +623,7 @@
   color: #ffffff;
   height: 40px;
   font-family: 'p22-underground', sans-serif;
+  justify-content: space-between;
 }
 
 .footer__navbar {
@@ -637,7 +638,7 @@
  display: flex;
  margin-top: 15px;
  font-size: 12px;
- margin-left: 130px;
+ margin-right: 30px;
  text-decoration: none;
 }
 
